Added missing logic in existing behaviours